--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "yarn workspaces run test",
     "build": "yarn workspaces run build",
     "clean": "rm -rf node_modules yarn.lock .yarn/install-state.gz && find packages -type d -name 'node_modules' -exec rm -rf {} + && yarn cache clean",
-    "payload:start": "(cd packages/payload && docker-compose up --build -d)",
+    "payload:start": "(cd packages/payload && docker-compose --project-name carvana up --build -d)",
     "payload:stop": "(cd packages/payload && docker-compose down)",
     "payload:restart": "yarn payload:stop && yarn payload:start"
   },
